--- a/inicio/style.css
+++ b/inicio/style.css
@@ -1,6 +1,6 @@
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to bottom right, #1f1b24, #3c0b2d);
+      font-family: serif;
+      background: linear-gradient(to bottom, #98122A, #1D0512);
       color: #fff;
       display: flex;
       justify-content: center;
