--- a/style.css
+++ b/style.css
@@ -15,14 +15,13 @@ body {
   border-radius: 20px;
   box-shadow: 0 0 30px rgba(255, 0, 100, 0.3);
   text-align: center;
-  max-width: 420px;
+  max-width: 680px;
   width: 90%;
 }
 
 h1 {
-  font-size: 1.6rem;
+  font-size: 2.6rem;
   color: #ff4d6d;
-  margin-bottom: 1rem;
 }
 
 .custom-select-wrapper {
@@ -36,7 +35,8 @@ h1 {
   color: #fff;
   padding: 0.7rem 1rem;
   border-radius: 10px;
-  font-size: 1rem;
+  font-size: 2.4rem;
+  font-weight: bold;
   cursor: pointer;
   display: flex;
   justify-content: space-between;
@@ -66,6 +66,9 @@ h1 {
   display: none;
   z-index: 10;
   border: 1px solid #ff4d6d;
+  font-size: 2.4rem;
+  font-weight: bold;
+  
 }
 
 .options li {
